# rosettaboy

./: .gitignore  .gitmodules  flake.nix
.github/workflows/: c.yml  common.yml  cpp.yml  go.yml  nim.yml  php.yml  pxd.yml  py.yml  rs.yml  utils.yml  zig.yml
bash/: test.bash
bash/src/: args.bash  common.bash  gameboy.bash
c/: default.nix  derivation.nix
cpp/: CMakeLists.txt  default.nix  derivation.nix
go/: default.nix  derivation.nix
go/src/: args.go
nim/: default.nix  derivation.nix
php/: default.nix  derivation.nix
py/: .gitignore  default.nix  derivation.nix  setup.py
py/src/: cart.py  clock.py  errors.py  main.py
rs/: Cargo.toml  default.nix  derivation.nix
utils/: default.nix  derivation.nix  get-checks-for-lang.nix  shell.nix
zig/: build.zig  default.nix  derivation.nix
